# drf_homework

./: .env.sample  Dockerfile  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
materials/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_rename_name_of_course_course_title_and_more.py  0003_course_owner_lesson_owner.py  0004_subscription.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: populate_payments.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_link_payment_session_id.py  0004_alter_payment_user.py
